# BeautyCityBot

./: README.md  beauty_city_bot.py  config.py  pyproject.toml  requirements.txt
beautycity/: beauty_city_bot.py
beautycity/beautycity/: settings.py  urls.py
beautycity/mainapp/: admin.py  models.py  views.py
